--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,13 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "/bang-game/icon_512.png",
+            "src": "/bang-game/icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "/bang-game/icon_192.png",
+            "src": "/bang-game/icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
